Fixed text not visible on dark mode in teams page

--- a/css/teams.css
+++ b/css/teams.css
@@ -3,6 +3,11 @@
   --theme-primary-color: #dba81f;
   --theme-secondary-color: #0b1d2f;
   --button-padding: 12px;
+  --text-color: white;
+}
+
+:where(html) {
+  color: var(--text-color);
 }
 
 * {
